end of changes for moving to monolith